311140 service column gap fix

--- a/src/style/bem-blocks/b-service/b-service.desktop.big.less
+++ b/src/style/bem-blocks/b-service/b-service.desktop.big.less
@@ -1,13 +1,15 @@
 /* 1440++  */
 
 .b-service {
-
+    padding-right: 0;
+    margin-right: -200px;
 
     &__list {
-        column-gap: 160px;
+        column-gap: 20px;
     }
 
     &__item {
+        max-width: 330px;
         margin-left: 0;
     }
 }
